# office-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  install.bat  install.ps1  uninstall.bat  uninstall.ps1
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: rust.yml
docs/: completion-audit.md
plugins/office-tools/: .mcp.json  requirements.txt
plugins/office-tools/.claude-plugin/: plugin.json
plugins/office-tools/bootstrap/: __init__.py  ato_mcp_launcher.py  ensure_python_deps.py  github_release.py  paths.py  run_pip.py
plugins/office-tools/commands/: office-tools-refresh-ato.md  update.md  version.md
plugins/office-tools/skills/ato/: SKILL.md
plugins/office-tools/skills/docx/: SKILL.md
plugins/office-tools/skills/hello/: SKILL.md
plugins/office-tools/skills/ooxml/: SKILL.md
plugins/office-tools/skills/outlook/: SKILL.md
plugins/office-tools/skills/pptx/: SKILL.md
plugins/office-tools/skills/xlsx/: SKILL.md
plugins/office-tools/tools/docx/: docx_tool.py
plugins/office-tools/tools/pptx/: brand.default.toml  brand.py  pptx_tool.py
plugins/office-tools/tools/xlsx/: xlsx_tool.py
plugins/office-tools/wheels/: lxml-5.3.0-cp313-cp313-win_amd64.whl  xlwings-0.33.5-cp313-cp313-win_amd64.whl
scripts/: windows-wincom-smoke.ps1
src/: doctor.rs  docx.rs  lib.rs  main.rs  mcp.rs  ooxml.rs  outlook.rs  pptx.rs  script.rs  wincom.rs
src/xlsx/: mod.rs
tests/: audit.rs  cli.rs
